--- a/CosasPollo/Artistas.html
+++ b/CosasPollo/Artistas.html
@@ -40,6 +40,21 @@
             <div class="image-container">
                 <img src="imgArtistas/artista3.jpg" alt="Frida Khalo" class="img-thumbnail" data-bs-toggle="modal" data-bs-target="#modalArtista3">
             </div>
+            <div class="image-container">
+                <img src="imgArtistas/artista4.jpg" alt="Salvador Dali" class="img-thumbnail" data-bs-toggle="modal" data-bs-target="#modalArtista4">
+            </div>
+            <div class="image-container">
+                <img src="imgArtistas/artista5.jpg" alt="Suzanne Belperron" class="img-thumbnail" data-bs-toggle="modal" data-bs-target="#modalArtista5">
+            </div>
+            <div class="image-container">
+                <img src="imgArtistas/artista6.jpeg" alt="Alexander Calder" class="img-thumbnail" data-bs-toggle="modal" data-bs-target="#modalArtista6">
+            </div>
+            <div class="image-container">
+                <img src="imgArtistas/artista7.jpg" alt="Claude Monet" class="img-thumbnail" data-bs-toggle="modal" data-bs-target="#modalArtista7">
+            </div>
+            <div class="image-container">
+                <img src="imgArtistas/artista8.jpg" alt="Artemisia Gentileschi" class="img-thumbnail" data-bs-toggle="modal" data-bs-target="#modalArtista8">
+            </div>
         </div>
 
         <!-- Modales -->
@@ -90,7 +105,83 @@
                 </div>
             </div>
         </div>
+        <!-- Modal Artista 4 -->
+        <div class="modal fade" id="modalArtista4" tabindex="-1" aria-labelledby="modalArtista4Label" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered modal-sm">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="modalArtista4Label">Salvador Dali</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <img src="imgArtistas/artista4.jpg" alt="Salvador Dali" class="img-fluid">
+                        <p class="mt-3">Conocido como "El Maestro del Surrealismo", Salvador Dalí sigue deslumbrando al mundo con su imaginación desbordante y su técnica impecable. Su capacidad para crear mundos oníricos y su personalidad extravagante lo mantienen como una figura central e innovadora en el arte contemporáneo.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Modal Artista 5 -->
+        <div class="modal fade" id="modalArtista5" tabindex="-1" aria-labelledby="modalArtista5Label" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered modal-sm">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="modalArtista5Label">Suzanne Belperron</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <img src="imgArtistas/artista5.jpg" alt="Salvador Dali" class="img-fluid">
+                        <p class="mt-3">Conocida como "La Reina del Diseño de Joyas", Suzanne Belperron sigue fascinando con su estilo audaz y visionario. Su habilidad para crear piezas únicas y su rechazo a firmar sus obras la convierten en una figura enigmática y admirada en el mundo de la alta joyería.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Modal Artista 6 -->
+        <div class="modal fade" id="modalArtista6" tabindex="-1" aria-labelledby="modalArtista6Label" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered modal-sm">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="modalArtista6Label">Alexander Calder</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <img src="imgArtistas/artista6.jpeg" alt="Alexander Calder" class="img-fluid">
+                        <p class="mt-3">Conocido como "El Maestro del Movimiento", Alexander Calder sigue encantando con sus esculturas cinéticas y móviles innovadores. Su enfoque lúdico y revolucionario del arte tridimensional lo mantiene como una figura destacada en el arte moderno, inspirando a generaciones con su creatividad sin límites.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Modal Artista 7 -->
+        <div class="modal fade" id="modalArtista7" tabindex="-1" aria-labelledby="modalArtista7Label" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered modal-sm">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="modalArtista7Label">Claude Monet</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <img src="imgArtistas/artista7.jpg" alt="Claude Monet" class="img-fluid">
+                        <p class="mt-3">Conocido como "El Padre del Impresionismo", Claude Monet sigue maravillando con sus paisajes etéreos y su innovador uso de la luz y el color. Su dedicación a capturar momentos fugaces en la naturaleza lo convierte en una figura central e influyente en la historia del arte.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Modal Artista 8 -->
+        <div class="modal fade" id="modalArtista8" tabindex="-1" aria-labelledby="modalArtista8Label" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered modal-sm">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="modalArtista8Label">Artemisia Gentileschi</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <img src="imgArtistas/artista8.jpg" alt="Artemisia Gentileschi" class="img-fluid">
+                        <p class="mt-3">Conocida como "La Pionera del Barroco", Artemisia Gentileschi sigue impresionando con su poderoso uso del dramatismo y su enfoque valiente en temas femeninos. Su habilidad para combinar técnica y emoción la mantiene como una figura influyente y respetada en la historia del arte.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
+    
 
     <!--========================================================== -->
     <!-- FOOTER -->
