--- a/CosasPollo/Galeria.html
+++ b/CosasPollo/Galeria.html
@@ -33,6 +33,11 @@
           <option value="miguelangel">Miguel Angel</option>
           <option value="vangogh">Van Gogh</option>
           <option value="frida">Frida Khalo</option>
+          <option value="dali">Salvador Dali</option>
+          <option value="suzanne">Suzanne Belperron</option>
+          <option value="alexander">Alexander Calder</option>
+          <option value="monet">Claude Monet</option>
+          <option value="artemisia">Artemisia Gentileschi</option>
         </select>
         <label for="type">Tipo de Arte:</label>
         <select id="type">
@@ -112,6 +117,41 @@
           <h3>Viva la Vida</h3>
           <p>Obra íntima que muestra el amor y la conexión emocional.</p>
           <p>$78.990</p>
+          <button class="add-to-cart" data-bs-toggle="popover" data-bs-placement="top" data-bs-content="Producto agregado correctamente">Agregar al carrito</button>
+        </div>
+        <div class="card" data-artist="dali" data-type="pintura">
+          <img src="imgObras/salvador-dali-la_tentacion_de_san_antonio-noticias-totenart-1.jpg" alt="pintura7">
+          <h3>La Tentacion de San Antonio</h3>
+          <p>Visiones surrealistas del deseo y la fe en lucha espiritual.</p>
+          <p>$199.990</p>
+          <button class="add-to-cart" data-bs-toggle="popover" data-bs-placement="top" data-bs-content="Producto agregado correctamente">Agregar al carrito</button>
+        </div>
+        <div class="card" data-artist="suzanne" data-type="orfebreria">
+          <img src="imgObras/6R1A1504_silo-Edit.jpg" alt="orfebreria1">
+          <h3>Anillo de oro</h3>
+          <p>Año 1945</p>
+          <p>$329.990</p>
+          <button class="add-to-cart" data-bs-toggle="popover" data-bs-placement="top" data-bs-content="Producto agregado correctamente">Agregar al carrito</button>
+        </div>
+        <div class="card" data-artist="alexander" data-type="escultura">
+          <img src="imgObras/steel-fish-1934.jpg" alt="escultura5">
+          <h3>Steel Fish</h3>
+          <p>Escultura cinética que evoca movimiento y fluidez marina</p>
+          <p>$250.990</p>
+          <button class="add-to-cart" data-bs-toggle="popover" data-bs-placement="top" data-bs-content="Producto agregado correctamente">Agregar al carrito</button>
+        </div>
+        <div class="card" data-artist="monet" data-type="pintura">
+          <img src="imgObras/comentario_de_el_estanque_de_ninfeas_4481_1_600.jpg" alt="pintura8">
+          <h3>Estanque de Ninfeas</h3>
+          <p>Lirios acuáticos vibrantes capturan la serenidad y luz natural.</p>
+          <p>$99.990</p>
+          <button class="add-to-cart" data-bs-toggle="popover" data-bs-placement="top" data-bs-content="Producto agregado correctamente">Agregar al carrito</button>
+        </div>
+        <div class="card" data-artist="artemisia" data-type="pintura">
+          <img src="imgObras/Judit_decapitando_a_Holofernes,_por_Artemisia_Gentileschi.jpg" alt="pintura9">
+          <h3>Judith decapitando a Holofernes</h3>
+          <p>Poder femenino, violencia justiciera, maestría en pintura</p>
+          <p>$599.990</p>
           <button class="add-to-cart" data-bs-toggle="popover" data-bs-placement="top" data-bs-content="Producto agregado correctamente">Agregar al carrito</button>
         </div>
       </div>
